--- a/app/views/parts/index.html.erb
+++ b/app/views/parts/index.html.erb
@@ -10,6 +10,13 @@
     </tr>
   </thead>
 
+
+  <%= form_tag(parts_path, method: :get) do %>
+  <%= text_field_tag :term, params[:term] %>
+  <%= submit_tag 'Search', name: nil%>
+  <% end %>
+
+
   <tbody>
     <% @parts.each do |part| %>
       <tr>
