Got car form working again with parts listed in dropdown. Unable to get dropdown objects to be associated with new car

--- a/app/views/cars_parts/index.html.erb
+++ b/app/views/cars_parts/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Cars Parts</h1>
+<h1>Cars Parts Home Page</h1>
 
 <table>
   <thead>
@@ -22,7 +22,10 @@
 
 <br>
 
+
 <%= link_to 'New Car', new_car_path %>
+<%= link_to 'Cars', cars_path%>
 <%= link_to 'New Part', new_part_path %>
 <%= link_to 'Parts', parts_path %>
-<%= link_to 'Cars', cars_path%>
+
+
