--- a/app/views/cars_parts/index.html.erb
+++ b/app/views/cars_parts/index.html.erb
@@ -1,4 +1,7 @@
 <p id="notice"><%= notice %></p>
+<%= link_to 'Home', cars_parts_path %>
+<%= link_to 'Cars', cars_path%>
+<%= link_to'Parts', parts_path %>
 
 <h1>Cars Parts Home Page</h1>
 
@@ -22,10 +25,8 @@
 
 <br>
 
-
 <%= link_to 'New Car', new_car_path %>
-<%= link_to 'Cars', cars_path%>
 <%= link_to 'New Part', new_part_path %>
-<%= link_to 'Parts', parts_path %>
+
 
 
