--- a/app/views/parts/index.html.erb
+++ b/app/views/parts/index.html.erb
@@ -1,3 +1,7 @@
+<%= link_to 'Home', cars_parts_path %>
+<%= link_to 'Cars', cars_path%>
+<%= link_to'Parts', parts_path %>
+
 <p id="notice"><%= notice %></p>
 
 <h1>Parts</h1>
