--- a/app/views/parts/new.html.erb
+++ b/app/views/parts/new.html.erb
@@ -1,3 +1,7 @@
+<%= link_to 'Home', cars_parts_path %>
+<%= link_to 'Cars', cars_path%>
+<%= link_to'Parts', parts_path %>
+
 <h1>New Part</h1>
 
 <%= render 'form', part: @part %>
