--- a/app/views/cars_parts/index.html.erb
+++ b/app/views/cars_parts/index.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
-
 <%= link_to 'Home', cars_parts_path %>
 <%= link_to 'Cars', cars_path%>
 <%= link_to'Parts', parts_path %>
+<%= link_to 'Log out', destroy_user_session_path, method: :delete %>
 
 <h1>Cars Parts Home Page</h1>
 
