--- a/app/views/parts/index.html.erb
+++ b/app/views/parts/index.html.erb
@@ -1,6 +1,7 @@
 <%= link_to 'Home', cars_parts_path %>
 <%= link_to 'Cars', cars_path%>
 <%= link_to'Parts', parts_path %>
+<%= link_to 'Log out', destroy_user_session_path, method: :delete %>
 
 <p id="notice"><%= notice %></p>
 
